[project]
name = "delta-concurrent-writes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deltalake>=1.4.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]
